# mackerel-mcp-server

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: format.yml
src/mackerel_mcp_server/: client.py  server.py
tests/: __init__.py  test_client.py
tools/: hosts.py
